# ph.daemon

./: .gitmodules  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-04-ph-daemon-plan.md
docs/superpowers/specs/: 2026-04-04-ph-daemon-design.md
prompts/: director.md  engineer.md  ephemeral.md  implementor.md  paper.md  planner.md  post_commit.md  researcher.md
src/daemon/: app.py  cli.py  config.py  db.py  orchestrator.py  tui.py
src/daemon/agents/: __init__.py  base.py  director.py  ephemeral.py  implementor.py  paper.py  planner.py
src/daemon/github/: __init__.py  hooks.py  issues.py
src/daemon/web/: routes.py  sse.py
src/daemon/web/templates/: agents.html  base.html  constraints.html  dashboard.html  issues.html  paper.html  session.html
tests/: conftest.py  test_agents.py  test_cli.py  test_db.py  test_github.py  test_web.py
