[project]
name = "ph-daemon"
version = "0.1.0"
description = "Automated research harness orchestrating claude CLI agents"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "aiosqlite>=0.20",
    "textual>=0.80",
]

[project.scripts]
phd = "daemon.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daemon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.35",
    "ruff>=0.9",
]
